Upload image page finished

--- a/Pear/Controllers/New New Redesign/Onboarding/Join By Self/Pictures/OnboardingPicturesViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Onboarding/Join By Self/Pictures/OnboardingPicturesViewController.storyboard
@@ -99,11 +99,40 @@ we can verify you’re real.</string>
                                 <color key="textColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gfx-xo-2zX">
+                                <rect key="frame" x="0.0" y="106" width="414" height="633.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cRw-lf-ZaA">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cgK-qg-i2O">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" id="QQa-BT-PAA"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="cRw-lf-ZaA" firstAttribute="leading" secondItem="Gfx-xo-2zX" secondAttribute="leading" id="8Yp-zz-Riv"/>
+                                    <constraint firstAttribute="trailing" secondItem="cRw-lf-ZaA" secondAttribute="trailing" id="MoT-i1-zke"/>
+                                    <constraint firstItem="cRw-lf-ZaA" firstAttribute="top" secondItem="Gfx-xo-2zX" secondAttribute="top" id="QNo-Gs-FQn"/>
+                                    <constraint firstItem="cRw-lf-ZaA" firstAttribute="width" secondItem="Gfx-xo-2zX" secondAttribute="width" id="SN7-HG-8X6"/>
+                                    <constraint firstItem="cRw-lf-ZaA" firstAttribute="centerX" secondItem="Gfx-xo-2zX" secondAttribute="centerX" id="TDf-Bo-aUB"/>
+                                    <constraint firstAttribute="bottom" secondItem="cRw-lf-ZaA" secondAttribute="bottom" id="tcf-cw-RcR"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Qjf-4w-faS" firstAttribute="top" secondItem="OaO-1C-sDl" secondAttribute="bottom" constant="12" id="3ml-K4-6HH"/>
+                            <constraint firstItem="OaO-1C-sDl" firstAttribute="top" secondItem="Gfx-xo-2zX" secondAttribute="bottom" id="3vL-hT-7Cj"/>
                             <constraint firstItem="FxB-8C-hEW" firstAttribute="trailing" secondItem="OCy-i0-bEV" secondAttribute="trailing" id="Ffv-PB-GM9"/>
+                            <constraint firstItem="OCy-i0-bEV" firstAttribute="trailing" secondItem="Gfx-xo-2zX" secondAttribute="trailing" id="HGM-gn-DZn"/>
+                            <constraint firstItem="Gfx-xo-2zX" firstAttribute="top" secondItem="FxB-8C-hEW" secondAttribute="bottom" constant="12" id="Hh4-JR-zSz"/>
+                            <constraint firstItem="Gfx-xo-2zX" firstAttribute="leading" secondItem="dmB-wa-ZMU" secondAttribute="leading" id="K7K-E7-OjY"/>
                             <constraint firstItem="OaO-1C-sDl" firstAttribute="leading" secondItem="OCy-i0-bEV" secondAttribute="leading" constant="20" id="dy2-dT-fzb"/>
                             <constraint firstItem="FxB-8C-hEW" firstAttribute="top" secondItem="OCy-i0-bEV" secondAttribute="top" id="htZ-QB-Jtd"/>
                             <constraint firstItem="FxB-8C-hEW" firstAttribute="leading" secondItem="OCy-i0-bEV" secondAttribute="leading" id="idZ-aB-tKL"/>
@@ -117,11 +146,13 @@ we can verify you’re real.</string>
                     <connections>
                         <outlet property="continueButton" destination="OaO-1C-sDl" id="4Fv-JQ-ahJ"/>
                         <outlet property="progressBarWidthConstraint" destination="gnj-C8-Pgu" id="Aj9-5E-bzu"/>
+                        <outlet property="stackView" destination="cRw-lf-ZaA" id="hcq-He-zkN"/>
                         <outlet property="titleLabel" destination="rxg-Ls-XX9" id="T7j-rg-bWe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ro9-O0-YYz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
     <resources>
