--- a/Pear/Controllers/New New Redesign/Permissions Pages/Allow Notifications Screen/AllowNotificationsViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Permissions Pages/Allow Notifications Screen/AllowNotificationsViewController.storyboard
@@ -16,6 +16,9 @@
         <array key="OpenSans-ExtraBold.ttf">
             <string>OpenSans-ExtraBold</string>
         </array>
+        <array key="OpenSans-SemiBold.ttf">
+            <string>OpenSans-SemiBold</string>
+        </array>
     </customFonts>
     <scenes>
         <!--Allow Notifications View Controller-->
@@ -29,8 +32,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="836-W6-BBr" userLabel="Header View">
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enable Location" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="eop-IM-ZXN">
-                                        <rect key="frame" x="89.5" y="8.5" width="196" height="33"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enable notifications" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="eop-IM-ZXN">
+                                        <rect key="frame" x="63.5" y="8.5" width="248" height="33"/>
                                         <fontDescription key="fontDescription" name="OpenSans-ExtraBold" family="Open Sans ExtraBold" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -88,15 +91,25 @@
                                     <constraint firstAttribute="width" secondItem="hWp-0I-cGw" secondAttribute="height" multiplier="1:1" id="VKO-V9-JLP"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nyw-Kf-IlX">
+                                <rect key="frame" x="59" y="347.5" width="257.5" height="44"/>
+                                <string key="text">We’ll notify you when you receive
+new matches and messages.</string>
+                                <fontDescription key="fontDescription" name="OpenSans-SemiBold" family="Open Sans SemiBold" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="hWp-0I-cGw" firstAttribute="centerX" secondItem="N0W-Nb-Mnw" secondAttribute="centerX" id="13W-zf-TJL"/>
+                            <constraint firstItem="nyw-Kf-IlX" firstAttribute="top" secondItem="N0W-Nb-Mnw" secondAttribute="bottom" constant="12" id="9Vk-eD-6jU"/>
                             <constraint firstItem="N0W-Nb-Mnw" firstAttribute="centerX" secondItem="EOZ-30-Rb8" secondAttribute="centerX" id="9pw-xy-1T0"/>
                             <constraint firstAttribute="trailing" secondItem="836-W6-BBr" secondAttribute="trailing" id="B0V-aX-tFJ"/>
                             <constraint firstItem="EOZ-30-Rb8" firstAttribute="trailing" secondItem="N0W-Nb-Mnw" secondAttribute="trailing" constant="50" id="BNt-O7-8hd"/>
                             <constraint firstItem="EOZ-30-Rb8" firstAttribute="trailing" secondItem="WeZ-3u-AV7" secondAttribute="trailing" constant="20" id="E3r-wr-NXT"/>
                             <constraint firstItem="EOZ-30-Rb8" firstAttribute="bottom" secondItem="WeZ-3u-AV7" secondAttribute="bottom" constant="20" id="IjB-A1-Blu"/>
+                            <constraint firstItem="nyw-Kf-IlX" firstAttribute="centerX" secondItem="EOZ-30-Rb8" secondAttribute="centerX" id="Jg7-2X-yLF"/>
                             <constraint firstItem="N0W-Nb-Mnw" firstAttribute="top" secondItem="hWp-0I-cGw" secondAttribute="bottom" constant="12" id="Rui-It-oGr"/>
                             <constraint firstItem="836-W6-BBr" firstAttribute="leading" secondItem="dhf-Ww-eqW" secondAttribute="leading" id="bhb-j8-mAB"/>
                             <constraint firstItem="836-W6-BBr" firstAttribute="top" secondItem="EOZ-30-Rb8" secondAttribute="top" id="gIU-Hh-axf"/>
