Fixes name fix #267

--- a/Pear/Controllers/Approve Profile Flow/Full Profile Approval View/ApproveProfileViewController.storyboard
+++ b/Pear/Controllers/Approve Profile Flow/Full Profile Approval View/ApproveProfileViewController.storyboard
@@ -23,7 +23,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Elizabeth added to your profile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxm-EC-5Ng">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Someone added to your profile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxm-EC-5Ng">
                                 <rect key="frame" x="0.0" y="56" width="414" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="WPL-F6-bzb"/>
