--- a/Pear/Controllers/Approve Profile Flow/Profile Found Page/ApproveDetachedProfileFoundViewController.storyboard
+++ b/Pear/Controllers/Approve Profile Flow/Profile Found Page/ApproveDetachedProfileFoundViewController.storyboard
@@ -1,73 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wXA-gq-gcr">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="OpenSans-SemiBold.ttf">
+            <string>OpenSans-SemiBold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Approve Detached Profile Found View Controller-->
         <scene sceneID="rM3-Vr-rPw">
             <objects>
                 <viewController id="wXA-gq-gcr" customClass="ApproveDetachedProfileFoundViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7EW-dV-Wys">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Good news!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="13a-lb-DzA">
-                                <rect key="frame" x="161.5" y="402.5" width="91" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Someone answered new prompts for you." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="13a-lb-DzA">
+                                <rect key="frame" x="30" y="210" width="315" height="40"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Someone has started a profile for you.  Choose your profile photos and see what they wrote." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvd-2p-GUa">
-                                <rect key="frame" x="40" y="453.5" width="334" height="61"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODI-3H-cEt">
-                                <rect key="frame" x="30" y="792" width="354" height="50"/>
-                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="QLI-HM-6SR"/>
-                                </constraints>
-                                <state key="normal" title="Continue"/>
-                                <connections>
-                                    <action selector="nextButtonClicked:" destination="wXA-gq-gcr" eventType="touchUpInside" id="bcI-M5-vga"/>
-                                </connections>
-                            </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fireworks-icon" translatesAutoresizingMaskIntoConstraints="NO" id="VlL-Dh-foD">
-                                <rect key="frame" x="137" y="222.5" width="140" height="140"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="writtenByThumbnailPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="VlL-Dh-foD">
+                                <rect key="frame" x="117.5" y="50" width="140" height="140"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="140" id="IfP-RH-OQA"/>
                                     <constraint firstAttribute="width" secondItem="VlL-Dh-foD" secondAttribute="height" multiplier="1:1" id="gMR-dn-BQ5"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pear selects 3 prompts answered by your friends to show on your profile." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1M0-2N-JNX">
+                                <rect key="frame" x="30" y="598.5" width="315" height="38.5"/>
+                                <fontDescription key="fontDescription" name="OpenSans-SemiBold" family="Open Sans SemiBold" pointSize="14"/>
+                                <color key="textColor" name="tertiaryTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODI-3H-cEt">
+                                <rect key="frame" x="30" y="538.5" width="315" height="50"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="QLI-HM-6SR"/>
+                                </constraints>
+                                <state key="normal" title="Save to Profile"/>
+                                <connections>
+                                    <action selector="nextButtonClicked:" destination="wXA-gq-gcr" eventType="touchUpInside" id="bcI-M5-vga"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="13a-lb-DzA" firstAttribute="leading" secondItem="gQ4-0s-yY9" secondAttribute="leading" constant="30" id="0lM-3J-fI1"/>
                             <constraint firstItem="VlL-Dh-foD" firstAttribute="centerX" secondItem="gQ4-0s-yY9" secondAttribute="centerX" id="1Vf-1D-Nem"/>
                             <constraint firstItem="ODI-3H-cEt" firstAttribute="leading" secondItem="gQ4-0s-yY9" secondAttribute="leading" constant="30" id="2S4-uD-feh"/>
-                            <constraint firstItem="gQ4-0s-yY9" firstAttribute="bottom" secondItem="ODI-3H-cEt" secondAttribute="bottom" constant="20" id="DKr-7m-Ci9"/>
+                            <constraint firstItem="1M0-2N-JNX" firstAttribute="leading" secondItem="gQ4-0s-yY9" secondAttribute="leading" constant="30" id="9zX-Nj-VJV"/>
+                            <constraint firstItem="VlL-Dh-foD" firstAttribute="top" secondItem="gQ4-0s-yY9" secondAttribute="top" constant="30" id="G9r-s8-5ZZ"/>
                             <constraint firstItem="13a-lb-DzA" firstAttribute="centerX" secondItem="gQ4-0s-yY9" secondAttribute="centerX" id="JNx-Bc-qKY"/>
-                            <constraint firstItem="nvd-2p-GUa" firstAttribute="leading" secondItem="gQ4-0s-yY9" secondAttribute="leading" constant="40" id="KfR-hU-1cf"/>
+                            <constraint firstItem="gQ4-0s-yY9" firstAttribute="trailing" secondItem="1M0-2N-JNX" secondAttribute="trailing" constant="30" id="Nud-I0-d8K"/>
                             <constraint firstItem="gQ4-0s-yY9" firstAttribute="trailing" secondItem="ODI-3H-cEt" secondAttribute="trailing" constant="30" id="RdE-46-tBD"/>
-                            <constraint firstItem="13a-lb-DzA" firstAttribute="top" secondItem="VlL-Dh-foD" secondAttribute="bottom" constant="40" id="W0d-pl-HIJ"/>
-                            <constraint firstItem="nvd-2p-GUa" firstAttribute="centerX" secondItem="13a-lb-DzA" secondAttribute="centerX" id="goQ-y9-6IH"/>
-                            <constraint firstItem="13a-lb-DzA" firstAttribute="centerY" secondItem="gQ4-0s-yY9" secondAttribute="centerY" constant="-40" id="gto-a1-ppa"/>
-                            <constraint firstItem="gQ4-0s-yY9" firstAttribute="trailing" secondItem="nvd-2p-GUa" secondAttribute="trailing" constant="40" id="jz4-wO-k4B"/>
-                            <constraint firstItem="nvd-2p-GUa" firstAttribute="top" secondItem="13a-lb-DzA" secondAttribute="bottom" constant="30" id="vBc-qK-x1u"/>
+                            <constraint firstItem="1M0-2N-JNX" firstAttribute="top" secondItem="ODI-3H-cEt" secondAttribute="bottom" constant="10" id="UYU-LN-BPd"/>
+                            <constraint firstItem="13a-lb-DzA" firstAttribute="top" secondItem="VlL-Dh-foD" secondAttribute="bottom" constant="20" id="W0d-pl-HIJ"/>
+                            <constraint firstItem="gQ4-0s-yY9" firstAttribute="trailing" secondItem="13a-lb-DzA" secondAttribute="trailing" constant="30" id="WVd-0d-VZg"/>
+                            <constraint firstItem="gQ4-0s-yY9" firstAttribute="bottom" secondItem="1M0-2N-JNX" secondAttribute="bottom" constant="30" id="zAc-RO-PT7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="gQ4-0s-yY9"/>
                     </view>
                     <connections>
+                        <outlet property="friendImage" destination="VlL-Dh-foD" id="1pq-Tl-g6A"/>
+                        <outlet property="friendImageHeightConstraint" destination="IfP-RH-OQA" id="svA-DC-q7G"/>
                         <outlet property="nextButton" destination="ODI-3H-cEt" id="sA1-ZO-Xu7"/>
-                        <outlet property="subtitleLabel" destination="nvd-2p-GUa" id="8p6-HO-yJO"/>
                         <outlet property="titleLabel" destination="13a-lb-DzA" id="Qzd-Tl-ZjC"/>
                     </connections>
                 </viewController>
@@ -77,6 +85,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="fireworks-icon" width="512" height="512"/>
+        <image name="writtenByThumbnailPlaceholder" width="200" height="200"/>
+        <namedColor name="tertiaryTextColor">
+            <color red="0.77999997138977051" green="0.79000002145767212" blue="0.80000001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
