--- a/Pear/Controllers/New New Redesign/Onboarding/Shared Components/Prompt Input/PromptInputResponseViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Onboarding/Shared Components/Prompt Input/PromptInputResponseViewController.storyboard
@@ -14,6 +14,9 @@
         <array key="OpenSans-Bold.ttf">
             <string>OpenSans-Bold</string>
         </array>
+        <array key="OpenSans-Regular.ttf">
+            <string>OpenSans-Regular</string>
+        </array>
     </customFonts>
     <scenes>
         <!--Prompt Input Response View Controller-->
@@ -39,7 +42,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Response" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="h9K-mS-w2L">
-                                        <rect key="frame" x="60" y="15.5" width="255" height="19"/>
+                                        <rect key="frame" x="60" y="14" width="255" height="22"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -59,8 +62,8 @@
                                             <constraint firstAttribute="height" constant="2" id="yss-Tp-uav"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sn0-wJ-qnJ">
-                                        <rect key="frame" x="326" y="7" width="33" height="32"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sn0-wJ-qnJ">
+                                        <rect key="frame" x="326" y="9" width="33" height="32"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
                                         <color key="tintColor" name="headerButtonColor"/>
                                         <state key="normal" title="Save"/>
@@ -92,33 +95,49 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HqP-u2-Jmn">
-                                <rect key="frame" x="22" y="123" width="331" height="70"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="52J-GO-GRG">
+                                <rect key="frame" x="20" y="126" width="335" height="78"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HqP-u2-Jmn">
+                                        <rect key="frame" x="8" y="4" width="319" height="70"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" name="primaryBrandColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="70" id="EcZ-UW-VkI"/>
+                                        </constraints>
+                                        <color key="textColor" name="primaryTextColor"/>
+                                        <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="EcZ-UW-VkI"/>
+                                    <constraint firstItem="HqP-u2-Jmn" firstAttribute="top" secondItem="52J-GO-GRG" secondAttribute="top" constant="4" id="9dc-jH-2Bw"/>
+                                    <constraint firstAttribute="trailing" secondItem="HqP-u2-Jmn" secondAttribute="trailing" constant="8" id="EhT-iL-bEP"/>
+                                    <constraint firstAttribute="bottom" secondItem="HqP-u2-Jmn" secondAttribute="bottom" constant="4" id="WcH-04-NXo"/>
+                                    <constraint firstItem="HqP-u2-Jmn" firstAttribute="leading" secondItem="52J-GO-GRG" secondAttribute="leading" constant="8" id="oCT-tP-IoI"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="v33-1Y-uBb" firstAttribute="leading" secondItem="FN7-3d-ZuW" secondAttribute="leading" constant="22" id="I9D-EH-aXh"/>
+                            <constraint firstItem="52J-GO-GRG" firstAttribute="leading" secondItem="FN7-3d-ZuW" secondAttribute="leading" constant="20" id="IMf-BX-9jo"/>
                             <constraint firstItem="v33-1Y-uBb" firstAttribute="top" secondItem="qye-3l-Rt1" secondAttribute="bottom" constant="16" id="JBY-VF-et7"/>
                             <constraint firstItem="qye-3l-Rt1" firstAttribute="top" secondItem="FN7-3d-ZuW" secondAttribute="top" id="JeQ-Kj-pvX"/>
-                            <constraint firstItem="HqP-u2-Jmn" firstAttribute="leading" secondItem="FN7-3d-ZuW" secondAttribute="leading" constant="22" id="YG4-b5-Ldq"/>
-                            <constraint firstItem="FN7-3d-ZuW" firstAttribute="trailing" secondItem="HqP-u2-Jmn" secondAttribute="trailing" constant="22" id="dza-nM-hmA"/>
                             <constraint firstItem="qye-3l-Rt1" firstAttribute="trailing" secondItem="FN7-3d-ZuW" secondAttribute="trailing" id="i89-hR-o1J"/>
                             <constraint firstItem="qye-3l-Rt1" firstAttribute="leading" secondItem="FN7-3d-ZuW" secondAttribute="leading" id="iBp-tO-iRt"/>
-                            <constraint firstItem="HqP-u2-Jmn" firstAttribute="top" secondItem="v33-1Y-uBb" secondAttribute="bottom" constant="17" id="icT-Ul-biI"/>
                             <constraint firstItem="FN7-3d-ZuW" firstAttribute="trailing" secondItem="v33-1Y-uBb" secondAttribute="trailing" constant="22" id="kFG-wP-59K"/>
+                            <constraint firstItem="52J-GO-GRG" firstAttribute="top" secondItem="v33-1Y-uBb" secondAttribute="bottom" constant="20" id="nMe-y6-dv5"/>
+                            <constraint firstItem="FN7-3d-ZuW" firstAttribute="trailing" secondItem="52J-GO-GRG" secondAttribute="trailing" constant="20" id="qDq-wb-xzC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="FN7-3d-ZuW"/>
                     </view>
                     <connections>
+                        <outlet property="inputTextContainerView" destination="52J-GO-GRG" id="Ass-9V-Cq8"/>
                         <outlet property="inputTextView" destination="HqP-u2-Jmn" id="o85-I6-gRy"/>
                         <outlet property="questionLabel" destination="v33-1Y-uBb" id="BxB-ES-XHy"/>
+                        <outlet property="textViewHeightConstraint" destination="EcZ-UW-VkI" id="aHg-d4-c6R"/>
                         <outlet property="titleLabel" destination="h9K-mS-w2L" id="6ci-Fg-mP4"/>
                     </connections>
                 </viewController>
@@ -134,6 +153,9 @@
         </namedColor>
         <namedColor name="primaryBrandColor">
             <color red="0.29411764705882354" green="0.86274509803921573" blue="0.52156862745098043" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="primaryTextColor">
+            <color red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
